# Raytracer

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
Application/: OApplication.cpp  OApplication.h
Application/Camera/: Camera.cpp  Camera.h  Raytracer.h
Application/Renderers/: AsyncRenderer.h  Renderer.h  SyncRenderer.h
Application/Scencens/: Scences.h  Scenes.h
Application/Scenes/: Scenes.h
Objects/: Hittable.h  HittableList.h  Ray.h  Sphere.cpp  Sphere.h
Objects/Hittable/: Hittable.h
Objects/Hittable/BVH/: BVHNode.cpp  BVHNode.h
Objects/Hittable/List/: HittableList.cpp  HittableList.h
Objects/Hittable/Quad/: Quad.cpp  Quad.h
Objects/Hittable/Sphere/: Sphere.cpp  Sphere.h
Objects/Hittable/Translated/: Translated.h
Objects/Hittable/Volumes/: ConstantMediumVolume.cpp  ConstantMediumVolume.h
Objects/Hittable/YRotated/: YRotated.cpp  YRotated.h
Objects/Materials/: Dielectric.h  DiffuseLight.h  Isotropic.h  Lambertian.h  Material.h  Metal.h
Objects/Textures/: CheckerTexture.h  ImageTexture.h  NoiseTexture.h  Texture.h
Ray/: ORay.h  SRay.h
Types/: Color.cpp  Color.h  Hittable.h  HittableList.h  Logger.h  Math.h  Types.h
Types/AABB/: AABB.cpp  AABB.h
Types/Interval/: Interval.cpp  Interval.h
Types/Output/: PPMSerializer.cpp  PPMSerializer.h  Serializable.h
Types/Profiler/: Profiler.h
Utils/: Color.h  Exceptions.h  Materials.h  Math.h  Utils.h
Utils/Algorithms/: Perlin.cpp  Perlin.h
Utils/ImageLoader/: STBImage.cpp  STBImage.h
